--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 <body>
     <canvas id="gameCanvas" width="800" height="400"></canvas>
     <div id="score" style="text-align: center; margin-top: 20px; font-size: 24px;"></div>
-    <script src="pong.js"></script>
+    <script src="pong.js"></script> <!-- Spostato qui -->
 </body>
 </html>
