--- a/index.html
+++ b/index.html
@@ -3,26 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ping Pong Game</title>
+    <title>Gioco di Ping Pong</title>
     <style>
         body {
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
+            justify-content: center;
             height: 100vh;
             margin: 0;
             background-color: #000;
-            color: #fff;
+            color: white;
             font-family: Arial, sans-serif;
         }
         canvas {
-            border: 1px solid #fff;
+            border: 1px solid white;
+        }
+        #readyButton {
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
-    <canvas id="gameCanvas" width="800" height="400"></canvas>
-    <div id="score" style="text-align: center; margin-top: 20px; font-size: 24px;"></div>
-    <script src="pong.js"></script> <!-- Spostato qui -->
+    <canvas id="pongCanvas" width="800" height="400"></canvas>
+    <button id="readyButton">Sono Pronto!</button>
+
+    <script src="pong.js"></script>
 </body>
 </html>
