--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
         #readyButton {
             margin-top: 20px;
         }
+        #sessionId {
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
     <canvas id="pongCanvas" width="800" height="400"></canvas>
     <button id="readyButton">Sono Pronto!</button>
+    <div id="sessionId">ID Sessione: </div>
 
     <script src="pong.js"></script>
 </body>
